# coda-api

./: .gitattributes  AGENTS.md  AGENTS.project.md  AGENTS.ts  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  coda.openapi.json  fnox.toml  mise.toml  rust-toolchain.toml
.agents/: project.md
.claude/commands/: implement-list-rows.md  implement-metadata-functions.md  implement-rows-rich.md  implement-type-fix-rs.md
.github/workflows/: ci.yml
.mise/tasks/: gen.sh
.mise/tasks/fix/: type.sh
doc/dev/: error-handling.md
examples/: doc_data.rs  doc_metadata.rs  list_rows.rs  list_rows_rich.rs  metadata.rs
snippets/: PushButtonResult
specs/: Cargo.toml  fix-client.md  impl-client.md
src/: client.rs  ext.rs  gen.rs  lib.rs  limiter.rs  parse.rs  test.rs
src/ext/: build_query_param.rs  doc_data.rs  doc_metadata.rs  duration_value_parser.rs  impl_from_for_value.rs  items_list.rs  metadata.rs  parse_cell_value.rs  parse_rich_value.rs  rich_rows.rs  row.rs  string_or_f64.rs  value_format_provider.rs
src/ext/parse_rich_value/: impl_try_from_rich_value_for_bool.rs  impl_try_from_rich_value_for_f64.rs  impl_try_from_rich_value_for_offset_date_time.rs  impl_try_from_rich_value_for_option_bool.rs  impl_try_from_rich_value_for_option_duration.rs  impl_try_from_rich_value_for_option_offset_date_time.rs  impl_try_from_rich_value_for_rich_row_reference.rs  impl_try_from_rich_value_for_string.rs
yolobox/configs/: secret_env_vars.txt
yolobox/configs/dnsmasq.d/: allowed_domains.conf
