[package]
name = "coda-api"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "Coda API client"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/coda-api"
repository = "https://github.com/DenisGorbachev/coda-api"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = "Coda API client"
tagline = ""
summary = ""
announcement = ""
readme = { }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_more = { version = "2.0.1", features = ["error"] }
error-handling = { git = "https://github.com/DenisGorbachev/error-handling-rs" }
fmt-derive = "0.1.2"
progenitor-client = "0.10.0"
regress = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.0", features = ["parsing"], optional = true }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = [
    "derive-getters",
    "derive-new",
    "derive_more",
    "fmt-derive",
    "helpful",
    "standard-traits",
    "strum",
    "stub-macro",
    "subtype"
]
