[package]
name = "coda-api"
version = "0.3.1"
edition = "2024"
rust-version = "1.85.0"
description = "Coda API client"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/coda-api"
repository = "https://github.com/DenisGorbachev/coda-api"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    "yolobox"
]

[package.metadata.details]
title = "Coda API client"
tagline = ""
summary = ""
announcement = ""
readme = { }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_more = { version = "2.0", features = ["display"] }
errgonomic = { version = "0.4.0" }
governor = { version = "0.10" }
# progenitor-client version must be pinned
progenitor-client = { version = "0.11.1" }
regress = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["parsing"], optional = true }
tokio = { version = "1.46", features = ["time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.46", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
